[gd_scene load_steps=17 format=3 uid="uid://can166jfd3ang"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_ion2u"]
[ext_resource type="PackedScene" uid="uid://tkfdolstdwsn" path="res://Models/Guns/fusil_5.tscn" id="2_nam32"]
[ext_resource type="PackedScene" uid="uid://dg25ia7j456g6" path="res://Models/Guns/pistol.tscn" id="2_weupy"]
[ext_resource type="PackedScene" uid="uid://cx75ucdt0wv3" path="res://Models/Guns/steampunk_rifle.tscn" id="3_mnww5"]
[ext_resource type="Texture2D" uid="uid://crwj3wi5a5xom" path="res://Textures/crosshair161.png" id="4_5butw"]
[ext_resource type="PackedScene" uid="uid://dfb4uibgnwvb3" path="res://Models/Melee/Axe.tscn" id="5_6chyl"]
[ext_resource type="PackedScene" uid="uid://dv3fsb25u1h7t" path="res://Models/Guns/fusil_1.fbx" id="5_muwyn"]
[ext_resource type="PackedScene" uid="uid://b8ivq584vysih" path="res://Models/Guns/fusil_1.tscn" id="6_85e50"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_4uxpl"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_7se6a"]

[sub_resource type="Animation" id="Animation_olall"]
resource_name = "DeathFall"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12), Vector3(2.08165e-12, -1.1, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_wiegb"]
resource_name = "LowerAuto"
length = 0.3
step = 0.01
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SteampunkAuto")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.146, -0.271, -0.337, 0.3, 1, 0.146, -1, -0.337)

[sub_resource type="Animation" id="Animation_x0p43"]
resource_name = "LowerPistols"
length = 0.3
step = 0.01
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pistol")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0.18, -0.2, -0.455, 0.3, 1, 0.18, -1, -0.455)
tracks/1/type = "position_3d"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pistol2")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = PackedFloat32Array(0, 1, -0.18, -0.2, -0.455, 0.3, 1, -0.18, -1, -0.455)

[sub_resource type="Animation" id="Animation_dpe75"]
resource_name = "Melee"
length = 0.1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Axe:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(2.61799, 3.48787e-16, -1.5708), Vector3(0.539569, -8.74228e-08, -1.5708)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Axe:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.064, -0.077, -0.109), Vector3(0.0641758, -0.0771548, -0.40935)]
}

[sub_resource type="Animation" id="Animation_gr8gy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Axe:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.539569, -8.74228e-08, -1.5708)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Axe:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.0641758, -0.0771548, -0.40935)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d8ctd"]
_data = {
"DeathFall": SubResource("Animation_olall"),
"LowerAuto": SubResource("Animation_wiegb"),
"LowerPistols": SubResource("Animation_x0p43"),
"Melee": SubResource("Animation_dpe75"),
"RESET": SubResource("Animation_gr8gy")
}

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(-1, 3.48787e-16, -8.74228e-08, 3.48787e-16, 1, -3.48787e-16, 8.74228e-08, -3.48787e-16, -1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
script = ExtResource("1_ion2u")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
shape = SubResource("CapsuleShape3D_4uxpl")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -4.02216e-24, 0, -4.02216e-24, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)
visible = false
mesh = SubResource("CapsuleMesh_7se6a")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.701306, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, 2.08165e-12)

[node name="fusil_5" parent="Head/Camera3D" instance=ExtResource("2_nam32")]
transform = Transform3D(0.3, -9.14758e-24, 7.34196e-16, 1.25293e-24, 0.3, -9.07702e-24, 0, 6.61744e-24, 0.3, -2.08165e-12, -0.701306, -2.08165e-12)
visible = false

[node name="fusil_6" parent="Head/Camera3D" instance=ExtResource("2_nam32")]
transform = Transform3D(0.3, 1.03349e-22, 7.34196e-16, 1.25293e-24, 0.3, -9.07702e-24, 0, 1.25731e-22, 0.3, 0.165137, -0.240934, -0.466386)
visible = false

[node name="Pistol" parent="Head/Camera3D" instance=ExtResource("2_weupy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.18, -1, -0.455)
visible = false

[node name="Pistol2" parent="Head/Camera3D" instance=ExtResource("2_weupy")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.18, -1, -0.455)
visible = false

[node name="SteampunkAuto" parent="Head/Camera3D" instance=ExtResource("3_mnww5")]
transform = Transform3D(0.02, 0, 0, 0, 0.02, 0, 0, 0, 0.02, 0.165, -0.241, -0.466)
visible = false

[node name="fusil_1" parent="Head/Camera3D" instance=ExtResource("5_muwyn")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0.165, -0.241, -0.466)

[node name="fusil_2" parent="Head/Camera3D" instance=ExtResource("6_85e50")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 2.08165e-12, -0.241, -0.466)

[node name="GunAimRay" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(1, 4.02216e-24, 0, -4.02216e-24, 1, 0, 0, 0, 1, 5.93784e-09, 0, -0.845031)
visible = false
target_position = Vector3(2.08165e-12, 1, -100)
collision_mask = 2
collide_with_areas = true

[node name="HitRect" type="ColorRect" parent="Head/Camera3D"]
visible = false
offset_left = -163.0
offset_top = -124.0
offset_right = 1310.0
offset_bottom = 773.0
color = Color(0.866667, 0.12549, 0.188235, 0.278431)

[node name="Crosshair" type="TextureRect" parent="Head/Camera3D"]
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("4_5butw")

[node name="AimRayEnd" type="Node3D" parent="Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.08165e-12, 2.08165e-12, -101.5)

[node name="Axe" parent="Head/Camera3D" instance=ExtResource("5_6chyl")]
transform = Transform3D(-3.57507e-06, 1, -7.50026e-08, -0.85793, -3.1057e-06, -0.513766, -0.513766, -1.77241e-06, 0.85793, 0.0641758, -0.0771548, -0.40935)
visible = false

[node name="WeaponSwitching" type="AnimationPlayer" parent="Head/Camera3D"]
libraries = {
"": SubResource("AnimationLibrary_d8ctd")
}

[node name="MeleeAimRay" type="RayCast3D" parent="Head/Camera3D"]
transform = Transform3D(30, 1.20665e-22, 0, -1.20665e-22, 30, 0, 0, 0, 3.5, 3.81438e-08, -0.00757277, -0.436314)
visible = false
target_position = Vector3(2.08165e-12, 2.08165e-12, -0.5)
collision_mask = 2
collide_with_areas = true
